@@ -32,7 +32,9 @@ add_executable(fala_qml ${SRC})
 install(PROGRAMS fala_qml DESTINATION /usr/bin/ RENAME fala_qml_wol)
 install(PROGRAMS fala_qml DESTINATION /usr/bin/ RENAME fala_qml_helloworld)
 install(PROGRAMS fala_qml DESTINATION /usr/bin/ RENAME fala_qml_wl)
+install(PROGRAMS fala_qml DESTINATION /usr/share/fala_images RENAME fala_qml_helloworld)
 install(FILES main.qml DESTINATION /usr/share/fala_qml_helloworld)
+install(FILES main.qml DESTINATION /usr/share/fala_images)
 install(FILES fala_qml_wl.desktop DESTINATION /usr/share/applications)
 install(FILES fala_qml_wol.desktop DESTINATION /usr/share/applications)
 install(SCRIPT scripts/create_links.cmake)
