@@ -61,7 +61,16 @@ Q_DECL_EXPORT int main(int argc, char **argv)
 
     QDeclarativeView *window = MDeclarativeCache::qDeclarativeView();
     timestamp("QDeclarativeView from cache");
-    
+
+    QString d_path, f_path; 
+    d_path = QString("applicationDirPath: ").append(QApplication::applicationDirPath());
+    const char * path_d = d_path.toStdString().c_str();
+    timestamp(path_d);
+
+    f_path = QString("applicationFilePath: ").append(QApplication::applicationFilePath());
+    const char * path_f = f_path.toStdString().c_str();
+    timestamp(path_f);
+
     window->setWindowTitle("Applauncherd QML testapp");
 
     window->setResizeMode(QDeclarativeView::SizeRootObjectToView);
